--- a/firefox-arch/PKGBUILD
+++ b/firefox-arch/PKGBUILD
@@ -1,5 +1,5 @@
-# Maintainer: Simon Brulhart <simon@brulhart.me>
-# Contributors: Det <nimetonmaili g-mail>, Achilleas Pipinellis, speed145a, Schnouki, bittin
+# Maintainer: LikDev-256 <lingamlikshan14@gmail.com>
+# Contributors: No one hahaha !. Be one ....
 
 pkgname=firefox
 _pkgname=firefox
